--- a/src/i18n/langs/ru/sidebarMenu.json
+++ b/src/i18n/langs/ru/sidebarMenu.json
@@ -8,7 +8,8 @@
         "title": "ДЛЯ ВАС",
         "name1": "Ваш профиль",
         "name2": "История",
-        "name3": "Ваши подписки"
+        "name3": "Ваши подписки",
+        "name4": "Избранные"
     },
     "moreVideos": {
         "title": "БОЛЬШЕ ВИДЕО",
